--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,9 +5,9 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    align-self: center;
     height: 100vh;
     background-image: url("../images/ground.png");
-    overflow: hidden;
     font-family: "Oswald";
     user-select: none;
     -webkit-user-select: none;
